fix spacing issue of banner

--- a/apps/game_server_web/priv/static/assets/css/app.css
+++ b/apps/game_server_web/priv/static/assets/css/app.css
@@ -3736,6 +3736,9 @@
   .pt-8 {
     padding-top: calc(var(--spacing) * 8);
   }
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
   .pr-2 {
     padding-right: calc(var(--spacing) * 2);
   }
